Correct some typos.

--- a/AttolightSEM_HYP.ipynb
+++ b/AttolightSEM_HYP.ipynb
@@ -23,12 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "%matplotlib qt\n",
-    "#For pop-up window plots, with interactive functionalities. If error, use instead %matplotlib tk \n",
+    "#For pop-up window plots, with interactive functionality. If error, use instead %matplotlib tk \n",
     "import lumispy as lum"
    ]
   },
@@ -50,18 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "<CLSEMSpectrum, title: , dimensions: (64, 64|1024)>"
-      ]
+      "text/plain": "<CLSEMSpectrum, title: , dimensions: (64, 64|1024)>"
      },
-     "execution_count": 32,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 2
     }
    ],
    "source": [
@@ -72,8 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "cl_sem.plot()"
@@ -116,16 +126,16 @@
     }
    ],
    "source": [
-    "cl_sem.background != None"
+    "cl_sem.background is not None"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run background substraction. No arguments required if the background is stored in the signal object. Otherwise, a background array of shape `[wavelength, bacgkround intensity]` needs to be passed as a `background` argument.\n",
+    "Run background subtraction. No arguments required if the background is stored in the signal object. Otherwise, a background array of shape `[wavelength, bacgkround intensity]` needs to be passed as a `background` argument.\n",
     "\n",
-    "Optional arguments are `background`: to substract an external background file, `inplace`: if `True` it will overwrite the original signal, if `False` if outputs a copy of the signal, with the background substracted (this is by default)."
+    "Optional arguments are `background`: to subtract an external background file, `inplace`: if `True` it will overwrite the original signal, if `False` if outputs a copy of the signal, with the background substracted (this is by default)."
    ]
   },
   {
@@ -157,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Correction of acquisiton defects\n",
+    "### Correction of acquisition defects\n",
     "\n",
     "Correct for the intrinsic shift caused by the misalignment of the grating with the spectrometer aperture centre. For the AttoLight in Cambridge, we have created a function to correct for it"
    ]
@@ -412,6 +422,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
