--- a/AttolightSEM_HYP.ipynb
+++ b/AttolightSEM_HYP.ipynb
@@ -23,13 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The HDF5 IO features are not available. Installation of h5py is highly recommended\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "%matplotlib qt\n",
     "#For pop-up window plots, with interactive functionality. If error, use instead %matplotlib tk \n",
@@ -54,25 +58,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "<CLSEMSpectrum, title: , dimensions: (64, 64|1024)>"
      },
+     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 2
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "path = \"DemoSample_fromAttoLightSEM/HYPCard.bin\"\n",
-    "cl_sem = lum.load_hypcard(path)\n",
+    "cl_sem = lum.load(path)\n",
     "cl_sem"
    ]
   },
@@ -160,7 +160,7 @@
    ],
    "source": [
     "cl_sem_bkg = cl_sem\n",
-    "cl_sem_bkg = cl_sem.background_substraction()"
+    "cl_sem_bkg = cl_sem.background_subtraction()"
    ]
   },
   {
@@ -407,9 +407,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "python3",
    "language": "python",
-   "name": "python3"
+   "display_name": "Python 3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -422,15 +422,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "source": [],
-    "metadata": {
-     "collapsed": false
-    }
-   }
   }
  },
  "nbformat": 4,
