--- a/AttolightSEM_HYP.ipynb
+++ b/AttolightSEM_HYP.ipynb
@@ -23,17 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The HDF5 IO features are not available. Installation of h5py is highly recommended\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib qt\n",
     "#For pop-up window plots, with interactive functionality. If error, use instead %matplotlib tk \n",
@@ -58,32 +50,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "<CLSEMSpectrum, title: , dimensions: (64, 64|1024)>"
+      "text/plain": "<CLSEMSpectrum, title: load_from_AttoLightSEM, dimensions: (64, 64|1024)>"
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path = \"DemoSample_fromAttoLightSEM/HYPCard.bin\"\n",
+    "path = \"demo-files/load_from_AttoLightSEM/HYPCard.bin\"\n",
     "cl_sem = lum.load(path)\n",
     "cl_sem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
-    }
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "cl_sem.plot()"
@@ -111,22 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "True"
-      ]
+      "text/plain": "True"
      },
-     "execution_count": 33,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cl_sem.background is not None"
+    "cl_sem.metadata.Signal.background is not None"
    ]
   },
   {
@@ -140,19 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/plain": "HBox(children=(IntProgress(value=0, max=4096), HTML(value='')))",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b8d5bbdec3a4f5bbe944d7eac727718",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=4096), HTML(value='')))"
-      ]
+       "version_minor": 0,
+       "model_id": "b0dc55e6dc3a444e9d84febcb884691d"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
@@ -174,19 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/plain": "HBox(children=(IntProgress(value=0, max=4096), HTML(value='')))",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2116531a59c4614acbe9b9c2acbb05a",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=4096), HTML(value='')))"
-      ]
+       "version_minor": 0,
+       "model_id": "74847218f4814b6b901ee4b176bed0ef"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
@@ -206,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,33 +204,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/plain": "HBox(children=(IntProgress(value=0, max=2916), HTML(value='')))",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42052ccdabe54f37827b0b9182f4e95d",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=4096), HTML(value='')))"
-      ]
+       "version_minor": 0,
+       "model_id": "3adfe3f333e34ae081115431be689052"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
-    "cl_sem_bkg_spikes = cl_sem_bkg.cosmic_rays_substraction(extra_percent=50)"
+    "cl_sem_bkg_spikes = cl_sem_bkg.cosmic_rays_subtraction(extra_percent=50)"
    ]
   },
   {
@@ -261,6 +234,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [],
+   "source": [
+    "cl_sem_bkg_spikes.plot()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -269,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,50 +336,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "├── Acquisition_instrument\n",
-       "│   ├── CCD\n",
-       "│   │   ├── amplification = 1\n",
-       "│   │   ├── binning = 1\n",
-       "│   │   ├── channels = 1024\n",
-       "│   │   ├── exposure_time_s = 0.3\n",
-       "│   │   └── readout_rate_khz = 1\n",
-       "│   ├── SEM\n",
-       "│   │   ├── FOV = 26391.201172\n",
-       "│   │   ├── aperture_um = 100.0\n",
-       "│   │   ├── beam_acc_voltage_kv = 5.998\n",
-       "│   │   ├── chamber_pressure_torr = 1.0426e-07\n",
-       "│   │   ├── dwell_time_scan_s = 0.30000001200000004\n",
-       "│   │   ├── gun_lens_amps = 1.2\n",
-       "│   │   ├── obj_lens_amps = 0.325544\n",
-       "│   │   ├── real_magnification = 26391.2011\n",
-       "│   │   ├── resolution_x = 64\n",
-       "│   │   └── resolution_y = 64\n",
-       "│   ├── Spectrometer\n",
-       "│   │   ├── central_wavelength_nm = 700.01\n",
-       "│   │   └── grating = 150.0\n",
-       "│   └── acquisition_system = cambridge_attolight\n",
-       "├── General\n",
-       "│   └── title = \n",
-       "└── Signal\n",
-       "    ├── background_substracted = True\n",
-       "    ├── binned = False\n",
-       "    ├── cosmic_rays_substracted_extra_percent = 50\n",
-       "    ├── cropped_edges = 5\n",
-       "    ├── grating_corrected = True\n",
-       "    └── signal_type = cl_sem_spectrum"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cl_sem_bkg_spikes.metadata"
    ]
