Fix demos to work with v0.1

--- a/AttolightSEM_HYP.ipynb
+++ b/AttolightSEM_HYP.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Demo for LumiSpy package working with AttoLight SEM CL data\n",
     "\n",
+    "### This notebook needs to be updated, as loading of Attolight data should not be done using the `.sur` file format and the `.bin` file will not be loaded.\n",
+    "\n",
     "This notebook shows:\n",
     "\n",
     "- Loading a `HYPCard.bin` file correctly with the lumispy load function\n",
@@ -23,12 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
-    "#For pop-up window plots, with interactive functionality. If error, use instead %matplotlib tk \n",
+    "%matplotlib notebook \n",
+    "# Use '%matplotlib widget' in JupterLab and '%matplotlib notebook' in JupyterNotebook for interactive inline functionality (e.g. on binder)\n",
+    "#For pop-up window plots on your local computer, use '%matplotlib tk' or '%matplotlib qt' instead\n",
+    "import hyperspy.api as hs\n",
     "import lumispy as lum"
    ]
   },
@@ -50,18 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<CLSEMSpectrum, title: load_from_AttoLightSEM, dimensions: (64, 64|1024)>"
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "path = \"demo-files/load_from_AttoLightSEM/HYPCard.bin\"\n",
     "cl_sem = lum.load(path)\n",
@@ -70,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,18 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cl_sem.metadata.Signal.background is not None"
    ]
@@ -126,22 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "HBox(children=(IntProgress(value=0, max=4096), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "b0dc55e6dc3a444e9d84febcb884691d"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cl_sem_bkg = cl_sem\n",
     "cl_sem_bkg = cl_sem.background_subtraction()"
@@ -158,22 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "HBox(children=(IntProgress(value=0, max=4096), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "74847218f4814b6b901ee4b176bed0ef"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cl_sem_bkg.correct_grating_shift()"
    ]
@@ -188,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,22 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "HBox(children=(IntProgress(value=0, max=2916), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "3adfe3f333e34ae081115431be689052"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cl_sem_bkg_spikes = cl_sem_bkg.cosmic_rays_subtraction(extra_percent=50)"
    ]
@@ -235,17 +182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "outputs": [],
-   "source": [
-    "cl_sem_bkg_spikes.plot()"
-   ],
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "cl_sem_bkg_spikes.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -256,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,9 +303,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
+   "display_name": "Python 3",
    "language": "python",
-   "display_name": "Python 3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -367,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
