--- a/GatanSEM_dm.ipynb
+++ b/GatanSEM_dm.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook \n",
+    "%matplotlib notebook\n",
     "# Use '%matplotlib widget' in JupterLab and '%matplotlib notebook' in JupyterNotebook for interactive inline functionality (e.g. on binder)\n",
     "#For pop-up window plots on your local computer, use '%matplotlib tk' or '%matplotlib qt' instead\n",
     "import lumispy as lum\n",
@@ -109,7 +109,7 @@
    "source": [
     "#### Convert from wavelength to energy axis\n",
     "\n",
-    "This will work only if you have installed the `non-uniform-axes` HyperSpy development branch (https://github.com/hyperspy/hyperspy/tree/non_uniform_axes):"
+    "Required versions: hyperspy>=1.7.0 and lumispy>=0.2"
    ]
   },
   {
@@ -292,7 +292,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -306,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
