--- a/AttolightSEM_sur_to_hspy.ipynb
+++ b/AttolightSEM_sur_to_hspy.ipynb
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "%matplotlib notebook\n",
+    "%matplotlib widget\n",
     "# Use '%matplotlib widget' in JupterLab and '%matplotlib notebook' in JupyterNotebook for interactive inline functionality (e.g. on binder)\n",
     "#For pop-up window plots on your local computer, use '%matplotlib tk' or '%matplotlib qt' instead\n",
     "import hyperspy.api as hs\n",
