--- a/GatanSEM_dm.ipynb
+++ b/GatanSEM_dm.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
+    "%matplotlib widget\n",
     "# Use '%matplotlib widget' in JupterLab and '%matplotlib notebook' in JupyterNotebook for interactive inline functionality (e.g. on binder)\n",
     "#For pop-up window plots on your local computer, use '%matplotlib tk' or '%matplotlib qt' instead\n",
     "import lumispy as lum\n",
