--- a/01_EnergyConversion_GaussianFitting.ipynb
+++ b/01_EnergyConversion_GaussianFitting.ipynb
@@ -319,11 +319,19 @@
     "g1.x0.value, g1.x0.bmax, g1.x0.bmin = g1_centre, g1_max, g1_min\n",
     "g1.fwhm.value, g1.fwhm.bmax, g1.fwhm.bmin = g1_fwhm, g1_fwhm_max, g1_fwhm_min\n",
     "g1.height.value, g1.height.bmax, g1.height.bmin = g1_h, g1_h_max, g1_h_min\n",
-    "bkg.offset.value = bkg_offset\n"
-    "# Set an index where signal is present (needed if non-emissive regions in the sample exist, which will collapse fitting to 0.)\n"
-    "cl_sem_eV.axes_manager.indices = (10,10)\n"
-    "m.fit()\n"
-    "m.assign_current_values_to_all()\n"
+    "bkg.offset.value = bkg_offset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set an index where signal is present (especially needed if non-emissive regions exist in the sample, as they will collapse fitting to 0)\n",
+    "cl_sem_eV.axes_manager.indices = (10,10)\n",
+    "m.fit()\n",
+    "m.assign_current_values_to_all()"
    ]
   },
   {
@@ -405,7 +413,7 @@
    "outputs": [],
    "source": [
     "m_x0 = g1.x0.as_signal()\n",
-    "m_x0.plot(cmap='inferno')\n",
+    "m_x0.plot(cmap='bwr_r', vcenter=m_x0.mean())\n",
     "m_intensity = g1.height.as_signal()\n",
     "m_intensity.plot(cmap='viridis')"
    ]
@@ -435,8 +443,17 @@
     "#Make mask to remove region where the intensity is below the mean value:\n",
     "mask_treshold = m_intensity.data.mean()\n",
     "mask = m_intensity.data > mask_treshold #Returns a boolean matrix mask\n",
-    "plt.imshow(mask)\n"
-    "(m_x0 * mask).plot(cmap='inferno') # Same X0 plot but using the mask now."
+    "plt.imshow(mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the mask to plot the same X0 plot\n",
+    "(m_x0 * mask).plot(cmap='bwr_r', vcenter=m_x0.mean())"
    ]
   },
   {
