--- a/01_EnergyConversion_GaussianFitting.ipynb
+++ b/01_EnergyConversion_GaussianFitting.ipynb
@@ -26,7 +26,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%matplotlib widget\n",
@@ -51,13 +53,15 @@
    "source": [
     "Load the `.hspy` file, which has already been pre-processed (background subtracted, spike removed and spectral corrected). See microscope-specific tutorials on how to do that.\n",
     "\n",
-    "*You can also leave the path empty. A pop-up window will appear to select the `.hspy` file from the browser.*"
+    "*You can also leave the path empty. A pop-up window will appear to select the| file from the browser.*"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Load file\n",
@@ -70,7 +74,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cl_sem.metadata"
@@ -95,7 +101,8 @@
     },
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -112,7 +119,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cl_sem.mean().plot()"
@@ -133,7 +142,8 @@
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -162,7 +172,8 @@
     },
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -186,7 +197,8 @@
     },
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -207,9 +219,38 @@
     }
    },
    "source": [
-    "## Wavelength to energy conversion\n",
+    "## Axes types and wavelength to energy conversion\n",
     "\n",
-    "Required versions: hyperspy>=1.7.0 and lumispy>=0.2"
+    "Required versions: hyperspy>=1.7.0 and lumispy>=0.2\n",
+    "\n",
+    "HyperSpy has different types of axes:\n",
+    "- The standard `UniformDataAxis` is defined through an `offset` and a `scale` (delta between pixels)\n",
+    "- A `FunctionalDataAxis` is defined through a `UniformDataAxis` and a `function` to convert the values\n",
+    "- A more general `DataAxis` is defined through an `axis` vector/array\n",
+    "\n",
+    "The *wavelength* scale of our sample object is a `UniformDataAxis`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cl_sem.axes_manager"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "*LumiSpy* provides easy conversions of the signal axis to the **energy scale**:\n",
+    "\n",
+    "It can either replace the axis in the existing object (default) or create a copy of the signal object with the new axis (`inplace=False`):"
    ]
   },
   {
@@ -222,12 +263,126 @@
     },
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "cl_sem_eV = cl_sem.to_eV(inplace=False)\n",
+    "cl_sem_eV = cl_sem.to_eV(inplace=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The axes manager now contains an `energy` axis, which is a non-uniform `DataAxis`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cl_sem_eV.axes_manager"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To explore the data in the energy domain, we again plot the signal:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "cl_sem_eV.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Jacobian transformation\n",
+    "\n",
+    "To preserve the integrated intensity per spectral window, a *Jacobian* transformation has to be applied to the signal intensity:\n",
+    "\n",
+    "As we require $I(E)dE = I(\\lambda)d\\lambda$, the scale transformation $E=hc/\\lambda$ implies\n",
+    "\n",
+    "$$I(E) = I(\\lambda)\\frac{d\\lambda}{dE} = I(\\lambda)\\frac{d}{dE}\n",
+    "\\frac{h c}{E} = - I(\\lambda) \\frac{h c}{E^2}$$\n",
+    "\n",
+    "(where the minus sign just reflects the different directions of integration in the wavelength and energy domains)\n",
+    "\n",
+    "This transformation is the default in LumiSpy, but can be deactivated by setting `jacobian=False`.\n",
+    "\n",
+    "To visualize the effect of the *Jacobian transformation*, we can plot a signal with constant intensity before and after the transformation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Create a model signal with linear intensity\n",
+    "import numpy as np\n",
+    "axis = {'offset': 300, 'scale': 4, 'units': 'nm', 'size': 101, 'name': 'Wavelength'}\n",
+    "s = hs.signals.Signal1D(np.ones(101), axes=[axis])\n",
+    "s.set_signal_type(\"Luminescence\")\n",
+    "s2 = s.to_eV(inplace=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Some additional arrays to help with visualizing the spectral bins during plotting\n",
+    "x = np.arange(9)*50+300\n",
+    "x2 = lum.nm2eV(x)\n",
+    "y2 = hs.signals.Signal1D(np.ones(9), axes=[{'offset': 300, 'scale': 50, 'size': 9,}])\n",
+    "y2.set_signal_type(\"Luminescence\")\n",
+    "y2.to_eV()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Plot comparative figures\n",
+    "fig1 = plt.figure(figsize=(10,4))\n",
+    "ax0 = plt.subplot(121)\n",
+    "plt.ylim(0,1.3)\n",
+    "plt.xlabel('Wavelength (nm)')\n",
+    "ax0.plot(s.axes_manager[0].axis,s.data,color='orange')\n",
+    "ax0.vlines(x,0,1,color='orange')\n",
+    "ax0.fill_between(s.axes_manager[0].axis,0,s.data, facecolor='orange', alpha=0.3)\n",
+    "ax1 = plt.subplot(122)\n",
+    "plt.ylim(0,0.43)\n",
+    "plt.xlabel('Energy (eV)')\n",
+    "ax1.plot(s2.axes_manager[0].axis,s2.data,color='orange')\n",
+    "ax1.vlines(x2,0,y2.data[::-1],color='orange')\n",
+    "ax1.fill_between(s2.axes_manager[0].axis,0,s2.data, facecolor='orange', alpha=0.3)"
    ]
   },
   {
@@ -236,7 +391,9 @@
    "source": [
     "## Fitting Gaussian\n",
     "\n",
-    "Select the starting parameters"
+    "We will introduce basic fitting functionality, for more details see the `Fitting_tutorial` in the [HyperSpy demos repository](https://github.com/hyperspy/hyperspy-demos).\n",
+    "\n",
+    "First, we need to **initialize the model**:"
    ]
   },
   {
@@ -253,85 +410,146 @@
    },
    "outputs": [],
    "source": [
-    "cl_sem_eV.plot()"
+    "m = cl_sem_eV.create_model()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "####################################\n",
-    "#MODEL\n",
-    "g1_centre = 2.4   # Guess for centre wavelength\n",
-    "g1_max = g1_centre + 0.2      # Max value for centre wavelength\n",
-    "g1_min = g1_centre - 0.2     # Min value for centre wavelength\n",
-    "\n",
-    "g1_fwhm = 0.1            #Guess for FWHM\n",
-    "g1_fwhm_max = 0.5       #Maxvalue for FWHM\n",
-    "g1_fwhm_min = 0.01         #Minvalue for FWHM\n",
-    "\n",
-    "g1_h = 5           #Guess for peak Intensity\n",
-    "g1_h_max = 50      #Maxvalue for peak Intesity\n",
-    "g1_h_min = 0         #Minvalue for peak Intensity\n",
-    "\n",
-    "bkg_offset = 1  #Background to be substracted"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "m = cl_sem_eV.create_model()\n",
-    "\n",
-    "#Background offset\n",
-    "bkg = hs.model.components1D.Offset()\n",
-    "#Gaussian peak\n",
-    "g1 = hs.model.components1D.Expression(\n",
-    "expression=\"height * exp(-(x - x0) ** 2 * 4 * log(2)/ fwhm ** 2)\",\n",
-    "name=\"Perovskite Peak\",\n",
-    "position=\"x0\",\n",
-    "height=1,\n",
-    "fwhm=1,\n",
-    "x0=0,\n",
-    "module=\"numpy\")\n",
-    "#Tweak guessed initial parameters\n",
-    "m.extend([g1, bkg])\n",
-    "g1.x0.value, g1.x0.bmax, g1.x0.bmin = g1_centre, g1_max, g1_min\n",
-    "g1.fwhm.value, g1.fwhm.bmax, g1.fwhm.bmin = g1_fwhm, g1_fwhm_max, g1_fwhm_min\n",
-    "g1.height.value, g1.height.bmax, g1.height.bmin = g1_h, g1_h_max, g1_h_min\n",
-    "bkg.offset.value = bkg_offset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "**Check the components** of the model (should be empty, but for some types of signals, an automatic background component is added):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Set an index where signal is present (especially needed if non-emissive regions exist in the sample, as they will collapse fitting to 0)\n",
-    "cl_sem_eV.axes_manager.indices = (10,10)\n",
+    "m.components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we need to **create some components** and **add them to the model**.\n",
+    "\n",
+    "We will use a constant `Offset` and a Gaussian (defined through height and FWHM, hence `GaussianHF`):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "bkg = hs.model.components1D.Offset()\n",
+    "g1 = hs.model.components1D.GaussianHF()\n",
+    "m.extend([g1, bkg])\n",
+    "m.components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To see the parameters of our components and their default values, we can **print all parameter values**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "m.print_current_values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets set some **sensible starting values** for our components, for a position in the map where we know that there should be signal (as it is not the case everywhere for our sample dataset):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cl_sem_eV.axes_manager.indices = (7,7)\n",
+    "g1.centre.value = 2.4        # Gaussian centre\n",
+    "g1.fwhm.value = 0.1      # Gaussian width\n",
+    "g1.height.value = 5      # Gaussian height\n",
+    "bkg.offset.value = 0.1   # background offset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also **set boundaries** (`bmin` and `bmax`) for some of the parameters:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "g1.centre.bmax = g1.centre.value + 0.2\n",
+    "g1.centre.bmin = g1.centre.value - 0.2\n",
+    "g1.fwhm.bmin = 0.01"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now **fit the model at the chosen position**, copy the result as starting value to all positions, and **plot** the result:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "m.fit()\n",
-    "m.assign_current_values_to_all()"
+    "m.assign_current_values_to_all()\n",
+    "m.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, we can also **print the updated parameters**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "m.print_current_values()"
    ]
   },
   {
@@ -342,7 +560,7 @@
     }
    },
    "source": [
-    "Fit all pixels. `iterpath` sets a continuous trail of fitting (without jumps from line to next)."
+    "The model now has the result from our chosen pixel everywhere. Using this as optimized starting paramters, we can now **fit all pixels**. When plotting, we activate additional plotting of the individual components:"
    ]
   },
   {
@@ -355,50 +573,23 @@
     },
     "pycharm": {
      "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#Fit for all the positions\n",
-    "m.multifit(bounded=True, show_progressbar=True, iterpath='serpentine')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
     },
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "m.print_current_values()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#Plot the fit on the raw data\n",
+    "m.multifit(bounded=True, show_progressbar=True)\n",
     "m.plot(plot_components=True)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To plot maps of the parameters of the Gaussian, we create signal objects from these datasets:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -408,12 +599,13 @@
     },
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "m_x0 = g1.x0.as_signal()\n",
-    "m_x0.plot(cmap='bwr_r', vcenter=m_x0.mean())\n",
+    "m_centre = g1.centre.as_signal()\n",
+    "m_centre.plot(cmap='bwr_r', centre_colormap=False) # Otherwise, it would be centred around `0` and we would see little difference between pixels\n",
     "m_intensity = g1.height.as_signal()\n",
     "m_intensity.plot(cmap='viridis')"
    ]
@@ -423,7 +615,8 @@
    "metadata": {},
    "source": [
     "### Particle segmentation\n",
-    "You can do particle segmentation using model fitting:"
+    "\n",
+    "We can use the fit model as basis to do a particle segmentation by **creating a mask** for all pixels, where the intensity is below the mean value:"
    ]
   },
   {
@@ -436,24 +629,35 @@
     },
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "#Make mask to remove region where the intensity is below the mean value:\n",
     "mask_treshold = m_intensity.data.mean()\n",
     "mask = m_intensity.data > mask_treshold #Returns a boolean matrix mask\n",
+    "plt.figure()\n",
     "plt.imshow(mask)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "We can now plot the previous graph of the centre-parametre, after applying the mask:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Use the mask to plot the same X0 plot\n",
-    "(m_x0 * mask).plot(cmap='bwr_r', vcenter=m_x0.mean())"
+    "(m_centre * mask).plot(cmap='bwr_r', vmin=2.3, centre_colormap=False) "
    ]
   },
   {
@@ -484,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
