--- a/GatanSEM_dm.ipynb
+++ b/GatanSEM_dm.ipynb
@@ -23,7 +23,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%matplotlib widget\n",
@@ -46,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Single spectrum\n",
@@ -63,7 +67,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cl_spec"
@@ -79,7 +85,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cl_spec.set_signal_type('CL_SEM')"
@@ -88,7 +96,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cl_spec"
@@ -97,7 +107,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cl_spec.plot()"
@@ -109,25 +121,33 @@
    "source": [
     "#### Convert from wavelength to energy axis\n",
     "\n",
-    "Required versions: hyperspy>=1.7.0 and lumispy>=0.2"
+    "Required versions: hyperspy>=1.7.0 and lumispy>=0.2\n",
+    "\n",
+    "*LumiSpy* provides easy conversions of the signal axis to the **energy scale**:\n",
+    "\n",
+    "It can either replace the axis in the existing object (default) or create a copy of the signal object with the new axis (`inplace=False`):"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "cl_spec.to_eV(inplace=True) # replaces the original signal"
+    "cl_spec_eV = cl_spec.to_eV(inplace=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "cl_spec.plot()"
+    "cl_spec_eV.plot()"
    ]
   },
   {
@@ -142,7 +162,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cl_linescan = hs.load('demo-files/load_from_GatanFiles/Test-linescan_InGaAs-NWs.dm4')"
@@ -158,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cl_linescan.plot()"
@@ -170,7 +194,9 @@
    "source": [
     "## Correction of spectral defects\n",
     "\n",
-    "Let's start by removing a simple offset as the signal background:\n",
+    "### Remove background (interactive)\n",
+    "\n",
+    "HyperSpy has an interactive tool for **background removal** that supports various functions, let's start by removing a **simple offset**:\n",
     "1. Select a region to be used to determine the background: On the signal plot click, drag and release\n",
     "2. You can still move the region or it's boundaries with the mouse and inspect the different spectra using the navigator to make sure the region is right\n",
     "3. Press `Apply`"
@@ -179,29 +205,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "cl_linescan.plot()\n",
     "cl_linescan.remove_background(background_type=\"Offset\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Remove last pixels from the spectrum\n",
+    "\n",
+    "The signal drops to negative values during the last pixels, so lets remove the last three pixels from every spectrum:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cl_linescan = cl_linescan.isig[:-3]\n",
+    "cl_linescan.plot()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is also a tool for interactive removal of cosmic rays (pixels with sharp spikes), see `Help` for instructions:\n",
+    "### Remove spikes (interactive)\n",
     "\n",
-    "- TODO: choose data file which includes several spikes"
+    "There is also a tool for interactive removal of cosmic rays (pixels with sharp spikes), see `Help` for instructions.\n",
+    "\n",
+    "In brief:\n",
+    "- Inspect the derivate histogram\n",
+    "- Set a sensible threshold to catch the outliers in the histogram\n",
+    "- Iterate through `Find next` / `Remove spike` to continue for wrong identifications / remove identified spikes\n",
+    "- `Close` when finished\n",
+    "\n",
+    "NOTE: This interactive function does not work with inline plotting (e.g. on binder)\n",
+    "\n",
+    "TODO: choose data file which includes several spikes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "cl_linescan.plot()\n",
     "cl_linescan.spikes_removal_tool()"
    ]
   },
@@ -219,7 +280,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cl_spec.metadata"
@@ -255,7 +318,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cl_spec.metadata.set_item('General.title', 'demo spectrum')\n",
@@ -265,7 +330,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cl_spec.metadata"
@@ -283,11 +350,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cl_spec.save('cl_test_spectrum.hspy')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## END"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -306,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
