Add marker plotting.

--- a/Workshops/230324_CLEBIC_HyperSpy-LumiSpy.ipynb
+++ b/Workshops/230324_CLEBIC_HyperSpy-LumiSpy.ipynb
@@ -31,7 +31,11 @@
    "source": [
     "## Import packages\n",
     "\n",
-    "We import the public functions (api = application programming interface) of `HyperSpy`. Some functionalities of `LumiSpy` are directly available if the package is installed, but we can separately load it to access extra utilities. Finally, `matplotlib.pyplot` provides some additional plotting functions and `numpy` numerical operations on arrays that we will use:"
+    "We import the public functions (api = application programming interface) of `HyperSpy`.\n",
+    "\n",
+    "Some functionalities of `LumiSpy` are directly available if the package is installed, but we can separately load it to access extra utilities.\n",
+    "\n",
+    "Finally, `matplotlib.pyplot` provides some additional plotting functions and `numpy` numerical operations on arrays that we will use:"
    ]
   },
   {
@@ -71,9 +75,11 @@
     "- TriVista XML `.tvf`\n",
     "- Renishaw wire format `.wdf`\n",
     "\n",
-    "*You can also leave the path empty. A pop-up window will appear to select the file.*\n",
+    "We will load three files that we will use during the demo. A preprocessed dataset saved in the `hspy` format and two maps in the `dm4` format:\n",
     "\n",
-    "We will load three files that we will use during the demo. A preprocessed dataset saved in the `hspy` format and two maps in the `dm4` format:"
+    "*We assume the file location as in the demo repository, if you downloaded the notebook and the data files individually, you might need to adapt the path.*\n",
+    "\n",
+    "*You can also leave the path empty. A pop-up window will appear to select.*"
    ]
   },
   {
@@ -117,7 +123,7 @@
     "\n",
     "As **LumiSpy** is installed, the dataset is directly recognized as CL data and the `signal_type` set to `CLSpectrum`. (The fallback would be the more generic `Signal1D` if LumiSpy is not installed).\n",
     "\n",
-    "The **signal type** provides certain specific routines, for example conversion to energy axis in the case of luminescence data.\n",
+    "The **signal class** provides certain specific routines, for example conversion to energy axis in the case of luminescence data.\n",
     "\n",
     "Our sample dataset has **two navigation dimensions** and **one signal (spectral) dimension**:"
    ]
@@ -329,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we can **plot the intensity in a selected a spectral window** (color-filtered image) using indexing:"
+    "Now, we can **plot the intensity in a selected spectral window** (color-filtered image) using indexing:"
    ]
   },
   {
@@ -388,7 +394,7 @@
    "source": [
     "## Axes types / Convert to energy scale\n",
     "\n",
-    "Required versions: hyperspy>=1.7.0 and lumispy>=0.2\n",
+    "Required versions: hyperspy>=1.7.0 and lumispy>=0.2.0\n",
     "\n",
     "HyperSpy has different types of axes:\n",
     "- The standard `UniformDataAxis` is defined through an `offset` and a `scale` (delta between pixels)\n",
@@ -728,7 +734,7 @@
    },
    "outputs": [],
    "source": [
-    "m.fit()\n",
+    "m.fit(bounded=True)\n",
     "m.assign_current_values_to_all()\n",
     "m.plot()"
    ]
@@ -852,7 +858,7 @@
     "\n",
     "HyperSpy has an interactive tool for **background removal** that supports various functions, let's start by removing a **simple offset**:\n",
     "1. Select a region to be used to determine the background: On the signal plot click, drag and release\n",
-    "2. You can still move the region or it's boundaries with the mouse and inspect the different spectra using the navigator to make sure the region is right\n",
+    "2. You can still move the region or its boundaries with the mouse and inspect the different spectra using the navigator to make sure the region is right\n",
     "3. Press `Apply`"
    ]
   },
@@ -864,6 +870,7 @@
    },
    "outputs": [],
    "source": [
+    "cl2.plot()\n",
     "cl2.remove_background(background_type=\"Offset\")"
    ]
   },
@@ -897,7 +904,7 @@
     "There is also a tool for interactive removal of cosmic rays (pixels with sharp spikes), see `Help` for instructions.\n",
     "\n",
     "In brief:\n",
-    "- Inspect the derivate histogram\n",
+    "- Inspect the derivative histogram\n",
     "- Set a sensible threshold to catch the outliers in the histogram\n",
     "- Iterate through `Find next` / `Remove spike` to continue for wrong identifications / remove identified spikes\n",
     "- `Close` when finished\n",
@@ -1056,8 +1063,8 @@
    },
    "outputs": [],
    "source": [
-    "width = cl2.isig[600.:].estimate_peak_width()\n",
-    "width.plot(cmap='viridis')"
+    "width = cl2.isig[600.:].estimate_peak_width(return_interval=True)\n",
+    "width[0].plot(cmap='viridis')"
    ]
   },
   {
@@ -1065,6 +1072,8 @@
    "metadata": {},
    "source": [
     "Especially for broad, asymmetric emission bands, the position of the maximum intensity might be of limited value. Therefore, **LumiSpy** provides an additional `centroid` function that determines the **centre of mass** of a peak.\n",
+    "\n",
+    "Required version: lumispy>=0.2.2\n",
     "\n",
     "*Note that, as with fitting, it might make more sense to run these routines in the energy domain after a Jacobian transformation than to convert the result - in particular for broad emission bands.*"
    ]
@@ -1085,6 +1094,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now we can **add markers** for the *FWHM interval* and the *centre of mass* to the signal object and plot them on the spectra:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "mrk = hs.plot.markers.vertical_line(com.data, color='black')\n",
+    "mrkl = hs.plot.markers.vertical_line(width[1].data, color='grey')\n",
+    "mrkr = hs.plot.markers.vertical_line(width[2].data, color='grey')\n",
+    "cl2.add_marker([mrk,mrkl,mrkr], permanent=True)\n",
+    "cl2.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Advanced fitting example\n",
     "\n",
     "Finally, to showcase the power of fitting with a programming language, lets fit the more complicated dataset `cl3`:\n",
@@ -1096,19 +1127,6 @@
     "*The presented dataset is a CL map of luminescent centers in h-BN on SiO$_2$, similar as discussed in Hernández-Mínguez et al., [Phys. Rev. Appl. 10, 2331](https://doi.org/10.1103/PhysRevApplied.10.044031) (2018). The analysis is simplified for instructive purposes.*\n",
     "\n",
     "*For reasons of calculation time, we run the fit on a single spectrum, but it could of course be looped across a complete spectral map - even with a variable number of peaks per spectrum. To apply functions defined for individual spectra on a complete spectral image, HyperSpy provides the [`map` function](https://hyperspy.org/hyperspy-doc/current/user_guide/signal.html#iterating-external-functions-with-the-map-method).*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getPeaks(S2):\n",
-    "    S2=S2.rebin(new_shape=[334])\n",
-    "    S2.smooth_savitzky_golay(window_length=15,polynomial_order=2)\n",
-    "    peaks = S2.find_peaks1D_ohaver(amp_thresh=0.2*np.max(S2.data),maxpeakn=10)[0]\n",
-    "    return peaks"
    ]
   },
   {
@@ -1136,6 +1154,19 @@
     "g2.height.value=20\n",
     "m.fit()\n",
     "m.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getPeaks(S2):\n",
+    "    S2=S2.rebin(new_shape=[334])\n",
+    "    S2.smooth_savitzky_golay(window_length=15,polynomial_order=2)\n",
+    "    peaks = S2.find_peaks1D_ohaver(amp_thresh=0.2*np.max(S2.data),maxpeakn=10)[0]\n",
+    "    return peaks"
    ]
   },
   {
