--- a/Workshops/230324_CLEBIC_HyperSpy-LumiSpy.ipynb
+++ b/Workshops/230324_CLEBIC_HyperSpy-LumiSpy.ipynb
@@ -64,9 +64,9 @@
     "HyperSpy supports a wide range of microscopy (and spectroscopy) related **data file types**:\n",
     "\n",
     "- Gatan `.dm3/.dm4`\n",
-    "- Attolight `.sur`\n",
-    "- Delmic `.hdf5` (might still need a parsing script at the moment)\n",
-    "- Hamamatsu streak camera images in `.tif` format\n",
+    "- Attolight `.sur` (For the moment does not parse `original_metadata` to `metadata`)\n",
+    "- Delmic `.hdf5` (Still needs a parsing script at the moment that you can obtain from Delmic, will be contributed to RosettaSciIO)\n",
+    "- Hamamatsu streak camera images in `.tif` format (Reading the itex `.img` format will be available in RosettaSciIO)\n",
     "- ...\n",
     "\n",
     "Further spectroscopy-related formats will be available soon (through **RosettaSciIO**):\n",
@@ -646,10 +646,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -657,7 +655,6 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "m.print_current_values()"
    ]
@@ -673,7 +670,9 @@
     }
    },
    "source": [
-    "Lets set some **sensible starting values** for our components, for a position in the map where we know that there should be signal (as it is not the case everywhere for our sample dataset):"
+    "Lets set some **sensible starting values** for our components, for a position in the map where we know that there should be signal (as it is not the case everywhere for our sample dataset):\n",
+    "\n",
+    "*Note that we could also use the estimate parameters function of the `GaussianHF` component (commented out line). However, this approach does not work as well as using manual starting values for this rather noisy dataset where many pixels do not contain spectra, unless additional boundaries are set to the parameters below.*"
    ]
   },
   {
@@ -690,6 +689,7 @@
    },
    "outputs": [],
    "source": [
+    "# g1.estimate_parameters(cl1_eV,2.3,2.5)\n",
     "cl1.axes_manager.indices = (7,7)\n",
     "g1.centre.value = 2.4        # Gaussian centre\n",
     "g1.fwhm.value = 0.1      # Gaussian width\n",
@@ -909,7 +909,7 @@
     "- Iterate through `Find next` / `Remove spike` to continue for wrong identifications / remove identified spikes\n",
     "- `Close` when finished\n",
     "\n",
-    "- *NOTE: This interactive function does not work well with inline plotting (e.g. on binder)*"
+    "- *NOTE: The interactive version does not work well with inline plotting (e.g. on binder)*"
    ]
   },
   {
@@ -920,25 +920,7 @@
    },
    "outputs": [],
    "source": [
-    "cl2.spikes_removal_tool()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**LumiSpy** provides an automated, non-interactive wrapper for removing spikes:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "cl2.remove_spikes()"
+    "cl2.spikes_removal_tool(interactive=False)"
    ]
   },
   {
@@ -1105,7 +1087,7 @@
    },
    "outputs": [],
    "source": [
-    "mrk = hs.plot.markers.vertical_line(com.data, color='black')\n",
+    "mrk = hs.plot.markers.vertival_line(com.data, color='black')\n",
     "mrkl = hs.plot.markers.vertical_line(width[1].data, color='grey')\n",
     "mrkr = hs.plot.markers.vertical_line(width[2].data, color='grey')\n",
     "cl2.add_marker([mrk,mrkl,mrkr], permanent=True)\n",
@@ -1216,8 +1198,15 @@
     "tags": []
    },
    "source": [
-    "## END\n"
+    "## Now try with your own data!\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
