--- a/Workshops/230324_CLEBIC_HyperSpy-LumiSpy.ipynb
+++ b/Workshops/230324_CLEBIC_HyperSpy-LumiSpy.ipynb
@@ -1087,7 +1087,7 @@
    },
    "outputs": [],
    "source": [
-    "mrk = hs.plot.markers.vertival_line(com.data, color='black')\n",
+    "mrk = hs.plot.markers.vertical_line(com.data, color='black')\n",
     "mrkl = hs.plot.markers.vertical_line(width[1].data, color='grey')\n",
     "mrkr = hs.plot.markers.vertical_line(width[2].data, color='grey')\n",
     "cl2.add_marker([mrk,mrkl,mrkr], permanent=True)\n",
