fix errors in CLEBIC tutorial

--- a/Workshops/230324_CLEBIC_HyperSpy-LumiSpy.ipynb
+++ b/Workshops/230324_CLEBIC_HyperSpy-LumiSpy.ipynb
@@ -646,8 +646,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -655,6 +657,7 @@
      "name": "#%%\n"
     }
    },
+   "outputs": [],
    "source": [
     "m.print_current_values()"
    ]
@@ -1087,7 +1090,7 @@
    },
    "outputs": [],
    "source": [
-    "mrk = hs.plot.markers.vertival_line(com.data, color='black')\n",
+    "mrk = hs.plot.markers.vertical_line(com.data, color='black')\n",
     "mrkl = hs.plot.markers.vertical_line(width[1].data, color='grey')\n",
     "mrkr = hs.plot.markers.vertical_line(width[2].data, color='grey')\n",
     "cl2.add_marker([mrk,mrkl,mrkr], permanent=True)\n",
