Update HyperSpy2.0 compatibility comments

--- a/Workshops/230704_Sfmu_LumiSpy.ipynb
+++ b/Workshops/230704_Sfmu_LumiSpy.ipynb
@@ -476,7 +476,7 @@
    "source": [
     "Now we can **add markers** for the *FWHM interval* (grey) and the *centre of mass* (black) to the signal object and plot them on the spectra.\n",
     "\n",
-    "*Note that all markers will be renamed in HyperSpy 2.0, `vertical_line` will be replaced by `VerticalLine`*"
+    "*Note that all markers will be renamed in HyperSpy 2.0, `vertical_line` will be replaced by `VerticalLines`*"
    ]
   },
   {
@@ -777,7 +777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
